test/visibility/import/rename/new_name_errors2.good
new_name_errors2.chpl:11: In function 'main':
new_name_errors2.chpl:12: error: 'Foo' undeclared (first use this function)
